<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/material_button_bar"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_bar_vertical_margin"
        android:paddingLeft="@dimen/button_bar_horizontal_margin"
        android:paddingRight="@dimen/button_bar_horizontal_margin"
        android:paddingTop="@dimen/button_bar_vertical_margin"
        android:gravity="center">

        <Button
            android:id="@+id/material_button_load"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_load"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/material_load"/>

        <Button
            android:id="@+id/material_button_change"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_create_small"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/material_change"
            android:visibility="gone"/>

        <Button
            android:id="@+id/material_button_remove"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_clear"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/material_remove"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/material_button_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/material_layout_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/material_layout_labels"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/MaterialHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:text="@string/material_unnr"/>

                        <TextView
                            android:id="@+id/material_unnr"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/MaterialHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:text="@string/material_tpben"/>

                        <TextView
                            android:id="@+id/material_tpben"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/MaterialHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:text="@string/material_klasskod"/>

                        <TextView
                            android:id="@+id/material_klasskod"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/MaterialHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:text="@string/material_frpgrp"/>

                        <TextView
                            android:id="@+id/material_frpgrp"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/MaterialHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:text="@string/material_etiketter"/>

                        <TextView
                            android:id="@+id/material_etiketter"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/MaterialHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:text="@string/material_tpkat"/>

                        <TextView
                            android:id="@+id/material_tpkat"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:id="@+id/material_tunnelkod_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/material_tunnelkod_heading"
                                style="@style/MaterialHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="top"
                                android:text="@string/material_tunnelkod"/>

                            <ImageView
                                android:id="@+id/material_tunnelkod_info"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_marginLeft="4dp"
                                android:contentDescription="@string/material_tunnelkod_help"
                                android:padding="2dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_info"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/material_tunnelkod"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:id="@+id/material_sarbest_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/MaterialHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="top"
                                android:text="@string/material_sarbest"/>

                            <ImageView
                                android:id="@+id/material_sarbest_info"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_marginLeft="4dp"
                                android:contentDescription="@string/material_sarbest_help"
                                android:padding="2dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_info"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/material_sarbest"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:id="@+id/material_begrmgd_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/MaterialHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="top"
                                android:text="@string/material_begrmgd"/>

                            <ImageView
                                android:id="@+id/material_begrmgd_info"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_marginLeft="4dp"
                                android:contentDescription="@string/material_begrmgd_help"
                                android:padding="2dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_info"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/material_begrmgd"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                    <TableRow
                        android:id="@+id/material_redmgd_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="top"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/MaterialHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="top"
                                android:text="@string/material_redmgd"/>

                            <ImageView
                                android:id="@+id/material_redmgd_info"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_marginLeft="4dp"
                                android:contentDescription="@string/material_redmgd_help"
                                android:padding="2dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_info"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/material_redmgd"
                            style="@style/MaterialLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"/>
                    </TableRow>

                </TableLayout>

				<TextView
                    android:id="@+id/material_fm_heading"
                    style="@style/MaterialHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_fm"/>

                <LinearLayout
                    android:id="@+id/material_fm_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
